Change width to be 100%, not 100vw, to avoid scrollbar issues on Chrome

--- a/src/app/Home.module.css
+++ b/src/app/Home.module.css
@@ -9,6 +9,5 @@
     background-image: url("/landing-background.jpg");
     background-position: center;
     background-size: cover;
-    width: 100vw;
     height: 100vh;
 }
