--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,6 @@
 }
 
 body {
-  width: 100vw;
   height: 100vh;
   color: var(--theme-color-text);
   background: linear-gradient(
